--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.9.6",
